--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       rel="stylesheet" />
     <title>Vite + React + TS</title>
   </head>
-  <body id="root">
+  <body>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
